--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   "homepage": "https://github.com/AlgrisMarquez/SCL014-md-links#readme",
   "dependencies": {
     "chalk": "^4.1.0",
-    "fetch": "^1.1.0"
+    "console": "^0.7.2",
+    "fetch": "^1.1.0",
+    "getting-links-from-markdown": "^1.0.4",
+    "jsdom": "^16.4.0",
+    "loads": "0.0.4",
+    "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1"
   }
 }
